Cultibox (2.0.24) precise; urgency=low
    + Correction de l'affichage des logs Cultipi

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Jan 06 14:41:12 CEST 2014


Cultibox (2.0.23) precise; urgency=low
    + Correction des nombres à virgule dans la vérification des valeurs
    + Correction de la gestion des messages des puissances manquantes

-- Yann Genevois <yann.genevois@cultibox.fr> Mon Jan 05 17:56:45 CEST 2014


Cultibox (2.0.22) precise; urgency=low
    + Ajout de la gestion des configurations Cultipi
    + Ajout du synoptique de l'onglet Cultipi

-- Yann Genevois <yann.genevois@cultibox.fr> Sat Dec 27 14:29:57 CEST 2014

    
Cultibox (2.0.21) precise; urgency=low
    + Correction de l'export d'une image des logs et du blockUI 
    + Ajout des couleurs pour les courbes des capteurs 5 et 6
    + Ajout d'une message par popup lorsqu'une courbe de puissance est sélectionnée sans puissance configurée
    + Correction de l'affichage des puissances pour le jour 07 de la semaine

-- Yann Genevois <yann.genevois@cultibox.fr> Sat Dec 20 12:26:18 CEST 2014


Cultibox (2.0.20) precise; urgency=low
    + Nettoyage des fonctions et locales inutilisées

-- Yann Genevois <yann.genevois@cultibox.fr> Fri Dec 12 17:14:12 CEST 2014


Cultibox (2.0.19) precise; urgency=low
    + Correction de la génération des plugv avec les programmes journaliers

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Dec 11 16:40:43 CEST 2014


Cultibox (2.0.18) precise; urgency=low
    + Suppréssion de la partie Wifi dans le logiciel cultibox
    + Ajout d'une variable pour déterminer le fonctionnement: cultibox ou cultipi

-- Yann Genevois <yann.genevois@cultibox.fr> Mon Dec 08 20:08:49 CEST 2014


Cultibox (2.0.18) precise; urgency=low
    + Correction appel l'affichage des logs pour un mois

-- Yann Genevois <yann.genevois@cultibox.fr> Mon Dec 08 10:44:19 CEST 2014


Cultibox (2.0.17) precise; urgency=low
    + Correction appel en AJAX
