@@ -45,6 +45,7 @@ check_database();
 
 // Variables for page cost :
 $cost=get_configuration("SHOW_COST");
+$webcam=get_configuration("SHOW_WEBCAM");
 
 
 ?>
@@ -164,7 +165,7 @@ $cost=get_configuration("SHOW_COST");
                                     }
                                     ?>
 
-                                    <li id="menu-webcam" class="level1 item164"><a href="/cultibox/index.php?menu=webcam" class="level1 href-webcam" ><span><?php echo __('MENU_WEBCAM'); ?></span></a></li>
+                                    <li id="menu-webcam" class="level1 item164" <?php if(!$webcam) { echo 'style="display:none"'; } ?>><a href="/cultibox/index.php?menu=webcam" class="level1 href-webcam" ><span><?php echo __('MENU_WEBCAM'); ?></span></a></li>
 
                                     <li id="menu-help" class="level1 item164"><a href="/cultibox/main/docs/documentation_cultibox.pdf" target="_blank" class="level1 href-help"><span><?php echo __('MENU_HELP'); ?></span></a></li>
                                 </ul>
